--- a/layouts/partials/cards/post.html
+++ b/layouts/partials/cards/post.html
@@ -2,8 +2,11 @@
   <div class="card">
     <div class="card-head">
       <a href="{{ .RelPermalink | relLangURL }}" class="post-card-link">
-        <img class="card-img-top" src='{{ partial "helpers/get-hero.html" . }}' alt="Hero Image">
-      </a>
+        <a href="{{ .RelPermalink | relLangURL }}" class="post-card-link">
+          {{ $hero:= partial "helpers/get-hero.html" (dict "context" . "width" "500x") }}
+          <img class="card-img-top" src='{{ $hero.RelPermalink }}'
+            alt="Hero Image" loading="lazy">
+        </a>
     </div>
     <div class="card-body">
       <a href="{{ .RelPermalink | relLangURL }}" class="post-card-link">
@@ -11,16 +14,14 @@
         <p class="card-text post-summary">{{ .Summary | plainify }}</p>
       </a>
       {{ if and site.Params.features.tags.enable site.Params.features.tags.on_card }}
-        {{ partial "misc/tags.html" .Params.tags }}
+      {{ partial "misc/tags.html" .Params.tags }}
       {{ end }}
     </div>
     <div class="card-footer">
       <span class="float-start">
-          {{ .Date | time.Format ":date_full" }}
-          {{ if site.Params.features.readingTime }} | {{.ReadingTime}} {{ i18n "minute" .ReadingTime }} {{ end }}</span>
-      <a
-      href="{{ .RelPermalink | relLangURL }}"
-      class="float-end btn btn-outline-info btn-sm">{{ i18n "read" }}</a>
+        {{ .Date | time.Format ":date_full" }}
+        {{ if site.Params.features.readingTime }} | {{.ReadingTime}} {{ i18n "minute" .ReadingTime }} {{ end }}</span>
+      <a href="{{ .RelPermalink | relLangURL }}" class="float-end btn btn-outline-info btn-sm">{{ i18n "read" }}</a>
     </div>
   </div>
 </div>
